--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/"
   },
-  "homepage": "https://github.com/undergrounddevs"
+  "homepage": "https://github.com/undergrounddevs",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
